# cpi-forecaster

./: .env.example  .gitattributes  .gitignore  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
notebooks/: 01_baseline.ipynb  _build_notebook.py
reports/: 2026-05-28_baseline.md  2026-05-29_baseline.md
src/macro_cpi/: catalog.py  cli.py  config.py  db.py  diagnostics.py  http.py  logging_conf.py
src/macro_cpi/features/: build.py
src/macro_cpi/ingestion/: base.py  fred.py  market.py  treasury.py
src/macro_cpi/models/: walk_forward.py
src/macro_cpi/reporting/: report.py
tests/: test_diagnostics.py  test_features.py  test_fred.py  test_http_and_walkforward.py  test_market.py  test_treasury.py
