[project]
name = "macro-cpi"
version = "0.1.0"
description = "Reproducible point-in-time macro forecasting engine. Default target: US headline CPI MoM SA."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pandas>=2.2",
    "numpy>=1.26",
    "scikit-learn>=1.4",
    "lightgbm>=4.3",
    "sqlalchemy>=2.0",
    "requests>=2.31",
    "yfinance>=0.2.40",
    "python-dotenv>=1.0",
    "matplotlib>=3.8",
    "scipy>=1.11",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-mock>=3.12",
    "responses>=0.25",
    "ruff>=0.4",
    "jupyter>=1.0",
    "nbconvert>=7.0",
]

[project.scripts]
macro-cpi = "macro_cpi.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/macro_cpi"]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]
extend-exclude = ["notebooks", "notebooks/*.py"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "ANN"]
ignore = ["ANN101", "ANN102"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["ANN"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
addopts = "-q"
